<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ttc.uniid.view.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        android:padding="20dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_border_view_login"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_header_logo_uniid"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/orangeApp"
                    android:textSize="@dimen/_40sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/user_your_uniid_account"
                    android:textColor="@color/textColorUnitel"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/phone_email_username"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_border_edittext_10dp"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:suffixTextColor="@color/colorButton">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/hint_phone_email_username"
                            android:inputType="textPersonName"
                            android:maxLength="64"
                            android:text="@={viewModel.userName}"
                            android:textSize="@dimen/_14sdp"
                            app:hintEnabled="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txtNameError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@{viewModel.invalidUserName}"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/_12sdp"
                        android:visibility="@{viewModel.invalidUserName.empty ? View.GONE: View.VISIBLE}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:id="@+id/lnLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/password"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_border_edittext_10dp"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:suffixTextColor="@color/colorButton"
                        app:passwordToggleDrawable="@drawable/password"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/roboto"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:text="@={viewModel.password}"
                            android:textSize="@dimen/_14sdp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txtPasswordError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@{viewModel.invalidPassword}"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/_12sdp"
                        android:visibility="@{viewModel.invalidPassword.empty? View.GONE: View.VISIBLE}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/phone_number"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_border_edittext_10dp"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:suffixTextColor="@color/colorButton">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/montserrat"
                            android:hint="@string/hint_phone_number"
                            android:inputType="phone"
                            android:maxLength="12"
                            android:text="@={viewModel.phone}"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@{viewModel.invalidPhone}"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/_12sdp"
                        android:visibility="@{viewModel.invalidPhone.empty? View.GONE: View.VISIBLE}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/otp_code"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/OTPLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_border_edittext_10dp"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:suffixTextColor="@color/colorButton">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/montserrat"
                            android:hint="@string/hint_otp_code"
                            android:inputType="number"
                            android:maxLength="6"
                            android:text="@={viewModel.otp}"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@{viewModel.invalidOTP}"
                        android:textColor="@color/colorButton"
                        android:textSize="@dimen/_12sdp"
                        android:visibility="@{viewModel.invalidOTP.empty? View.GONE: View.VISIBLE}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutLoginWithOTP"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtLoginWithPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="left|center_vertical"
                        android:text="@string/login_with_password"
                        android:textColor="@color/orangeApp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtSendOTP"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="right|center_vertical"
                        android:text="@string/send_otp"
                        android:textColor="@color/orangeApp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutLoginWithPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/_10sdp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtLoginWithOtp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/roboto"
                        android:text="@string/login_with_otp"
                        android:textColor="@color/orangeApp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:gravity="right|center_vertical"
                        android:text="@string/forgot_password"
                        android:textColor="@color/orangeApp" />

                </LinearLayout>
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_60sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/button_orange_5dp_corner_light_theme"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:text="@string/or_login_with"
                    android:textColor="@color/textColorUnitel"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_google" />

                    <ImageView
                        android:id="@+id/imgFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/ic_facebook"
                        android:layout_marginStart="5dp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDontHaveAccountSingUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/textColorUnitel"
                    android:textSize="16sp"
                    app:layout_constraintVertical_bias="0.029" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <RelativeLayout
            android:clickable="true"
            android:focusable="true"
            android:visibility="@{viewModel.loading? View.VISIBLE: View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>